# periodic_table_api

./: .gitignore  CMakeLists.txt  Colors.h  Periodic_Table.csv  README.md  WindowWrapper.h  WindowWrapper.mm  main  main.c  main.cpp  main.ipynb  main.swift  myapp  periodic_table.py  sgl_window.h  sgl_window.m  window.swift
SGL/include/SGL/: sgl.h  sgl_draw.h  sgl_errors.h  sgl_patterns.h  sgl_pixels.h  sgl_ppm.h  sgl_window.h
SGL/include/SGL/image/: sgl_colors.h  sgl_draw.h  sgl_patterns.h
SGL/include/SGL/math/: sgl_matrix.h  sgl_vec.h
SGL/src/: sgl_draw.c  sgl_errors.c
SGL/src/cocoa/: sgl_window.m
SGL/src/images/: sgl_draw.c  sgl_patterns.c  sgl_ppm.c
SGL/src/math/: sgl_matrix.c  sgl_vec.c
app/: main.c  main.cpp
app/images/: checker.ppm  test.ppm  test1.ppm  test2.ppm
include/: sgl_colors.h
src/cocoa/: sgl_window.h
